--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0"?>
 <package>
   <name>advanced_navigation_driver</name>
-  <version>1.0.0</version>
+  <version>1.1.0</version>
   <description>The Advanced Navigation driver package for ROS</description>
 
   <maintainer email="support@advancednavigation.com.au">support@advancednavigation.com.au</maintainer>
+  <maintainer email="rgoulartns@gmail.com">Rafael Goulart</maintainer>
 
   <license>MIT</license>
 
