--- a/package.xml
+++ b/package.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0"?>
-<package>
-  <name>advanced_navigation_driver</name>
-  <version>1.1.0</version>
-  <description>The Advanced Navigation driver package for ROS</description>
-
-  <maintainer email="support@advancednavigation.com.au">support@advancednavigation.com.au</maintainer>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
+  <name>an_ins_driver</name>
+  <version>1.0.0</version>
+  <description>The Advanced Navigation driver package for ROS2</description>
   <maintainer email="rgoulartns@gmail.com">Rafael Goulart</maintainer>
-
   <license>MIT</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
-	
-  <build_depend>roscpp</build_depend>
-  <build_depend>std_msgs</build_depend>
-	
-  <run_depend>roscpp</run_depend>
-  <run_depend>std_msgs</run_depend>
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
+  <depend>rclcpp</depend>
+  <depend>sensor_msgs</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
